--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "scripts": {
     "build": "browserify controller.js > static/bundle.js",
-	"watch": "watchify controller.js -o static/bundle.js"
+	"dev": "watchify controller.js -o static/bundle.js & node server.js"
   }
 }
